# embedding-provider

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deployments/gpu4/: jina-v5-nano.env.example  qwen3-embedding-0.6b.env.example
provider/: app.py  config.py  gpu_worker.py
scripts/: deploy_gpu4.sh  start_host_instance.sh  start_public_cloudflared.sh  status_host_instance.sh
tests/: test_runtime_idle_offload.py  test_service_observability.py
